@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model - US010

class ProductionManager {
}

class Product {
    id
    name
    description
    capacity
    size
    color
    price
}

class ProductCategory {
    id
    name
}

ProductionManager "1" -- "1..*" Product : register >
Product "*" -- "1" ProductCategory : belongs to >

@enduml
